--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -914,8 +914,8 @@
   "create_update_react_component": "Create or update an existing React component as shown below.",
   "copy_code": "Copy Code",
   "code_copied": "Code copied!",
-  "how_you_want_add_cal_site": "How do you want to add Cal to your site?",
-  "choose_ways_put_cal_site": "Choose one of the following ways to put Cal on your site.",
+  "how_you_want_add_cal_site": "How do you want to add the calendar to your site?",
+  "choose_ways_put_cal_site": "Choose one of the following ways to put the calendar on your site.",
   "setting_up_zapier": "Setting up your Zapier integration",
   "generate_api_key": "Generate API key",
   "generate_api_key_description": "Generate an API key to use with Cal.com at",
